--- a/assets/common.css
+++ b/assets/common.css
@@ -32,6 +32,7 @@
     --margin-p-right: 8px;
 	--left-arrow: 100px;
 	--right-arrow: 84px;
+	--bottom-arrow: 50px;
 }
 body {
 	color: #030303;
